# gym_interf

./: .gitignore  README.md  install.sh  setup.py
gym_interf/: __init__.py
gym_interf/envs/: __init__.py  calc_image_cpp.py  calc_image_cuda.py  domain_randomizer.py  interf_env.py  interf_no_lenses.py  interf_telescope.py  utils.py
gym_interf/envs/cpp/: CMakeLists.txt
gym_interf/envs/cpp/include/: interflib.h  types.h  utils.h
gym_interf/envs/cpp/src/: interflib.cpp
gym_interf/envs/libs/: libinterf.dylib
